<resources>
    <string name="app_name">KRISHIAPP</string>
    <string name="jai_kisan">JAI KISAN</string>
    <string name="todo">TODO</string>
    <string name="jai_jawan">JAI JAWAN</string>
    <string name="weather_forecast">Weather Forecast</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="date">Date</string>
    <string name="my_city">My city</string>
    <string name="sunny">Sunny</string>
    <string name="c">C</string>
    <string name="_30">30</string>

    <string name="sign_out">Sign Out</string>

    <string name="id">ID:</string>
    <string name="email">Email:</string>

    <string name="name">Name:</string>
    <string name="paddy">Paddy</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="weather">Weather</string>
    <string name="info">Info</string>
    <string name="prize">Prize</string>
    <string name="open" />
    <string name="close" />
    <string name="header_view">Header view</string>
    <string name="my_account">My Account</string>
    <string name="settings">Settings</string>

    <string name="selectedlanguage">English</string>


</resources>